@@ -1,10 +1,10 @@
 Package: zipfR
 Type: Package
 Title: Statistical Models for Word Frequency Distributions
-Version: 0.6-46
+Version: 0.6-47
 Depends: R (>= 3.0.0)
 Imports: methods, utils, stats, graphics, grDevices
-Date: 2019-07-20
+Date: 2019-07-21
 Author: Stefan Evert <stefan.evert@fau.de>, Marco Baroni <marco.baroni@unitn.it>
 Maintainer: Stefan Evert <stefan.evert@fau.de>
 Description: Statistical models and utilities for the analysis of word frequency distributions.
