@@ -1,4 +1,4 @@
-importFrom(stats, density, median, na.omit, nlm, optim, sd, uniroot)
+importFrom(stats, density, median, sd, IQR, na.omit, nlm, optim, uniroot)
 importFrom(stats, dbinom, rhyper, runif, rbinom, rmultinom, rnorm, qnorm, pchisq, pbeta, qbeta, pgamma, qgamma)
 importFrom(utils, read.delim, setTxtProgressBar, txtProgressBar, write.table)
 importFrom(grDevices, dev.cur, dev.list, dev.new, dev.off, dev.set, pdf, png, postscript)
@@ -32,7 +32,7 @@ export(rlnre)
 export(postdlnre, postldlnre, postplnre, postqlnre)
 
 export(read.multiple.objects)
-export(lnre.bootstrap)
+export(lnre.bootstrap, bootstrap.confint)
 
 export(productivity.measures)
 
